# vfs

./: .gitignore  CMakeLists.txt  README.md  build.sh  diagram.yuml  main.cpp
.github/workflows/: build.yaml
include/: file_system.h  strings.cpp  strings.h
src/: Application.cpp  Application.h  CommandParser.cpp  CommandParser.h  CommandValidation.h  CommandlineParser.cpp  CommandlineParser.h  FileSystem.cpp  FileSystem.h  FileSystemOperations.cpp  FileSystemOperations.h  TreeFileSystem.cpp  TreeFileSystem.h  application.cpp  application.h  commandline_parser.cpp  commandline_parser.h  file_system_operations.cpp  file_system_operations.h  inmemory_file_system.cpp  inmemory_file_system.h  tree_file_system.cpp  tree_file_system.h
src/file_system/: tree.cpp  tree.h
test/: application_test.cpp  strings_test.cpp
